# taskiq_global_free_example

./: Dockerfile  docker-compose.yml  pyproject.toml
src/my_app/: adapters.py  broker.py  fastapi_app.py  interfaces.py  providers.py  tasks.py
